--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -6,6 +6,7 @@
     {{/each}}
 </ul>
 
+<!--POST method to signup for an account for your favorite color-->
 <form method="POST" action="/signup">
     Username: <input name="username"/>
     Password: <input type="password" name="password"/>
