--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -1,3 +1,6 @@
+
+<!--Get the page of the account user's information when signing up for the account-->
+<!--It saves the information that the user's saved in it-->
 <h2>Welcome to the password protected area</h2>
 
 <p>Hello, {{username}}</p>
@@ -28,6 +31,7 @@
     {{/each}}
 </ul>
 
+<!--The form method for saving any changes made to the user's account information-->
 <form action="/saveSecrets" method="POST">
     Favorite Color: <input type="text" name="color">  <br>
     Lucky Number: <input type="number" name="luckyNumber">  <br>
