--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,6 +6,7 @@
     {{/each}}
 </ul>
 
+<!--Login form to login into your account if you have created an account already-->
 <form method="POST" action="/login">
     Username: <input name="username"/>
     Password: <input type="password" name="password"/>
